# al_openocd

./: .gitignore  .gitlab-ci.yml  NEWS-AL  NEWS-SOC  README  configure.ac  dbgbuild_lin.sh  dbgbuild_win.sh  docker编译环境搭建.md  relbuild_lin.sh  relbuild_win.sh
doc/: openocd.texi
src/: openocd.c
src/flash/: Makefile.am  loader_io.c  loader_io.h  startup-nand.tcl  startup.tcl  target_io.c  target_io.h
src/flash/emmc/: Makefile.am  core.c  core.h  driver.c  driver.h  dwc_mshc.c  dwc_mshc.h  dwc_mshc_mmc.c  dwc_mshc_mmc.h  dwcmshc.c  dwcmshc.h  dwcmshc_mmc.c  dwcmshc_mmc.h  dwcmshc_regs.h  dwcmshc_subs.c  dwcmshc_subs.h  fileio.c  fileio.h  imp.h  target_io.c  target_io.h  tcl.c
src/flash/nand/: Makefile.am  core.c  core.h  driver.c  driver.h  fileio.c  fileio.h  imp.h  onfi.c  onfi.h  smc35x.c  smc35x.h  tcl.c
src/flash/nor/: Makefile.am  core.c  core.h  custom.c  devs.h  driver.h  drivers.c  dwcssi.c  dwcssi.c.bak  dwcssi.h  dwcssi_flash.c  dwcssi_flash.c.bak  dwcssi_flash.h  dwcssi_flash.h.bak  fespi.c  imp.h  nuspi.c  spi.c  spi.h  tcl.c
src/flash/nor/devs/: devs.c  devs.h  gd_gd25b512.c  gd_gd25q.c  general_spi.c  gigadev_gd25q.c  issi.c  mc.c  sp_s25fl.c  win.c  zd_zd25q.c  zetta_zd25q.c
src/flash/nor/dwcssi/: dwcssi.c  dwcssi.c.bak  dwcssi.h  dwcssi_flash.c  dwcssi_flash.h
src/flash/nor/dwcssi/devs/: sp_s25fl.c
src/helper/: jep106.inc  log.c  log.h  replacements.h
src/jtag/: adapter.c  commands.h  core.c  interface.h  jtag.h  minidriver.h  startup.tcl  tcl.c
src/server/: Makefile.am  gdb_server.c  (+5 more)
tcl/: cross_trigger.tcl  ftdi_scan.tcl  unlock.tcl
(+79 files in other folders)
